--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -39,7 +39,7 @@
                         <div class="row" ng-repeat="order in orders">
                             <div class="col-md-2">{{order.id}}</div>
                             <div class="col-md-2">{{order.date}}</div>
-                            <div class="col-md-2"><span class="label" ng-class="'label-success': order.status === 'checkin', 'label-info': order.status === 'checkedout'">{{order.status}}</span></div>
+                            <div class="col-md-2"><span class="label" ng-class="{'label-success': order.status === 'checkin', 'label-info': order.status === 'checkedout'}">{{order.status}}</span></div>
                             <div class="col-md-4">{{order.item}}</div>
                         </div>
                     </div>
