updated cases view

--- a/public/templates/cases.html
+++ b/public/templates/cases.html
@@ -5,7 +5,7 @@
             <small>Case Management</small>
         </h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+            <li><a href="#"><i class="fa fa-dashboard"></i>Home</a></li>
             <li class="active">Cases</li>
         </ol>
     </section>
@@ -29,6 +29,13 @@
                                 <label for="serial" class="col-md-3 control-label">Number</label>
                                 <div class="col-md-7 col-sm-12">
                                     <input class="form-control" type="text" name="serial" id="serial" ng-model="caseNumber">
+                                </div>
+                            </div>
+
+                            <div class="form-group ">
+                                <label for="serial" class="col-md-3 control-label">Description</label>
+                                <div class="col-md-7 col-sm-12">
+                                    <input class="form-control" type="text" name="<descript></descript>ion" id="description" ng-model="caseDescription">
                                 </div>
                             </div>
 
