--- a/public/templates/products.html
+++ b/public/templates/products.html
@@ -1,12 +1,12 @@
 <div>
     <section class="content-header">
         <h1>
-            Dashboard
-            <small>Control panel</small>
+            Products
+            <small>Product List</small>
         </h1>
         <ol class="breadcrumb">
             <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li class="active">Dashboard</li>
+            <li class="active">Products</li>
         </ol>
     </section>
 
