add login checks before rendering dashboard, cases, products and new pages

--- a/public/templates/left-navigation.html
+++ b/public/templates/left-navigation.html
@@ -5,22 +5,22 @@
         <ul class="sidebar-menu">
             <li class="header text-aqua">Menu</li>
             <li class="treeview" ui-sref-active="active">
-                <a ui-sref="home">
+                <a ui-sref="home.dashboard">
                     <i class="fa fa-dashboard"></i> <span>Home</span>
                 </a>
             </li>
             <li class="treeview" ui-sref-active="active">
-                <a ui-sref="cases">
+                <a ui-sref="home.cases">
                     <i class="fa fa-suitcase"></i> <span>Cases</span>
                 </a>
             </li>
             <li class="treeview" ui-sref-active="active">
-                <a ui-sref="products">
+                <a ui-sref="home.products">
                     <i class="fa fa-cogs"></i> <span>Products</span>
                 </a>
             </li>
             <li class="treeview" ui-sref-active="active">
-                <a ui-sref="new">
+                <a ui-sref="home.new">
                     <i class="fa fa-plus"></i> <span>New</span>
                 </a>
             </li>
