added logout button and functionality.

--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -12,5 +12,9 @@
         <a class="sidebar-toggle" data-toggle="offcanvas" role="button">
             <span class="sr-only">Toggle Navigation</span>
         </a>
+
+        <div class="pull-right logout-btn" ng-show="isLoggedIn">
+            <button class="btn btn-warning btn-flat" ng-click="logout()">Sign out</button>
+        </div>
     </nav>
 </header>
