rename new to create for use with products and cases

--- a/public/templates/left-navigation.html
+++ b/public/templates/left-navigation.html
@@ -20,8 +20,8 @@
                 </a>
             </li>
             <li class="treeview" ui-sref-active="active">
-                <a ui-sref="home.new">
-                    <i class="fa fa-plus"></i> <span>New</span>
+                <a ui-sref="home.create">
+                    <i class="fa fa-plus"></i> <span>Create</span>
                 </a>
             </li>
         </ul>
