--- a/public/templates/products.html
+++ b/public/templates/products.html
@@ -38,14 +38,16 @@
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="row">
-                                    <div class="col-sm-2"><h4>Id</h4></div>
-                                    <div class="col-sm-4"><h4>Product</h4></div>
+                                    <div class="col-sm-2"><h4>Asset Tag</h4></div>
                                     <div class="col-sm-2"><h4>Quantity</h4></div>
+                                    <div class="col-sm-4"><h4>Product</h4></div>
+                                    <div class="col-sm-4"><h4>Description</h4></div>
                                 </div>
                                 <div class="row" ng-repeat="product in products">
-                                    <div class="col-sm-2">{{product.id}}</div>
-                                    <div class="col-sm-4">{{product.name}}</div>
+                                    <div class="col-sm-2">{{product.assetTag}}</div>
                                     <div class="col-sm-2">{{product.quantity}}</div>
+                                    <div class="col-sm-4">{{product.name}}</div>
+                                    <div class="col-sm-4">{{product.description}}</div>
                                 </div>
                             </div>
                         </div>
