--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -99,9 +99,7 @@
                         <!-- /.box-body -->
                         <div class="box-footer text-right">
                             <a class="btn btn-link" ng-click="cancel()">Cancel</a>
-                            <button type="submit" class="btn btn-success" id="submit-button" ng-click="createItem()">
-                                <i class="fa fa-check icon-white"></i> Save
-                            </button>
+                            <button type="submit" class="btn btn-success save-icon" id="submit-button" ng-click="createItem()">Save</button>
                         </div>
                         <!-- /.box-footer -->
                     </div>
