--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -18,7 +18,7 @@
                 <!-- TABLE: LATEST ORDERS -->
                 <div class="box box-info">
                     <div class="box-header with-border">
-                        <h3 class="box-title">Recent Orders</h3>
+                        <h3 class="box-title">Recent Status Changes</h3>
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
@@ -51,8 +51,7 @@
             <div class="col-md-4 ">
                 <div class="box box-info">
                     <div class="box-header with-border">
-                        <button type="button" class="btn btn-block btn-primary btn-lg">Add Case</button>
-                        <button type="button" class="btn btn-block btn-success btn-lg">Add Products</button>
+                        <button type="button" class="btn btn-block btn-primary btn-lg" ui-sref="home.create">Create Items</button>
                     </div>
                 </div>
             </div>
