--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -35,9 +35,7 @@
                         </div>
                         <div class="box-footer text-right">
                             <a class="btn btn-link" ng-click="cancel()">Cancel</a>
-                            <button type="submit" class="btn btn-success" id="submit-button" ng-click="attemptLogin()">
-                                <i class="fa fa-lock icon-white"></i> Login
-                            </button>
+                            <button type="submit" class="btn btn-success login-icon" id="submit-button" ng-click="attemptLogin()">Login</button>
                         </div>
                     </div>
                 </form>
