--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -14,7 +14,7 @@
         </a>
 
         <div class="pull-right logout-btn" ng-show="isLoggedIn">
-            <button class="btn bg-purple btn-flat" ng-click="logout()">Sign out</button>
+            <button class="btn bg-purple btn-flat logout-icon" ng-click="logout()">Log Out</button>
         </div>
     </nav>
 </header>
