--- a/public/templates/left-navigation.html
+++ b/public/templates/left-navigation.html
@@ -24,6 +24,11 @@
                     <i class="fa fa-plus"></i> <span>Create</span>
                 </a>
             </li>
+            <li class="treeview" ui-sref-active="active">
+                <a ui-sref="home.orders">
+                    <i class="fa fa-map-pin"></i> <span>Orders</span>
+                </a>
+            </li>
         </ul>
     </section>
 </aside>
