added order routes and template

--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -50,7 +50,7 @@
                 <div class="box box-info">
                     <div class="box-header with-border">
                         <button type="button" class="btn btn-block btn-primary btn-lg" ui-sref="home.create">Create Items</button>
-                        <button type="button" class="btn btn-block btn-secondary btn-lg">Check-In / Check-Out</button>
+                        <button type="button" class="btn btn-block btn-success btn-lg">Check-In / Check-Out</button>
                     </div>
                 </div>
             </div>
