--- a/public/templates/orders.html
+++ b/public/templates/orders.html
@@ -1,3 +1,64 @@
 <div>
-    Orders Template
+    <section class="content-header">
+        <h1>
+            Orders
+            <small>Order Tracker</small>
+        </h1>
+        <ol class="breadcrumb">
+            <li><a href="#"><i class="fa fa-dashboard"></i>Home</a></li>
+            <li class="active">Order</li>
+        </ol>
+    </section>
+
+    <!-- Main content -->
+    <section class="content">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="box">
+                    <div class="box-header">
+                        <h3 class="box-title">Orders</h3>
+                    </div>
+                    <!-- /.box-header -->
+                    <div class="box-body">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="dataTables_length">
+                                    <label>Records 
+                                        <select name="orderCount" aria-controls="orderCount" class="form-control input-sm" ng-options="count.label for count in ordersCountDropdown" ng-model="orderCount">
+                                        </select>
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-sm-6">
+                                <div id="orderSearch" class="dataTables_filter">
+                                    <label>Search:<input type="search" class="form-control input-sm" ng-model="orderSearchTerm"></label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-sm-12">
+                                <div class="row">
+                                    <div class="col-sm-2">
+                                        <h4>Asset Tag</h4>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <h4>Order Id</h4>
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <h4>Description</h4>
+                                    </div>
+                                </div>
+                                <div class="row" ng-repeat="order in orders">
+                                    <div class="col-sm-2">{{order.assetTag}}</div>
+                                    <div class="col-sm-2">{{order.status}}</div>
+                                    <div class="col-sm-4">{{order.location}}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </div>
