--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -39,7 +39,7 @@
                         <div class="row" ng-repeat="order in orders">
                             <div class="col-md-2">{{order.assetTag}}</div>
                             <div class="col-md-2">{{order.updatedAt | date:'HH:mm dd/MMM/yy'}}</div>
-                            <div class="col-md-2"><span class="label" ng-class="{'label-success': order.status === 'checkin', 'label-info': order.status === 'checkedout'}">{{order.status}}</span></div>
+                            <div class="col-md-2"><span class="label" ng-class="{'label-info': order.location === 'warehouse', 'label-warning': order.location !== 'warehouse'}">{{order.status}}</span></div>
                             <div class="col-md-4">{{order.item}}</div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                 <div class="box box-info">
                     <div class="box-header with-border">
                         <button type="button" class="btn btn-block btn-primary btn-lg" ui-sref="home.create">Create Items</button>
-                        <button type="button" class="btn btn-block btn-success btn-lg">Check-In / Check-Out</button>
+                        <button type="button" class="btn btn-block btn-success btn-lg" ui-sref="home.orders">Check-In / Check-Out</button>
                     </div>
                 </div>
             </div>
