--- a/public/templates/orders.html
+++ b/public/templates/orders.html
@@ -16,18 +16,22 @@
             <div class="col-xs-12">
                 <div class="box">
                     <div class="box-header">
-                        <h3 class="box-title">Orders</h3>
+                        <h3 class="box-title">Recent Orders</h3>
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
                         <div class="row">
-                            <div class="col-sm-6">
+                            <!--<div class="col-sm-2">
                                 <div class="dataTables_length">
                                     <label>Records 
-                                        <select name="orderCount" aria-controls="orderCount" class="form-control input-sm" ng-options="count.label for count in ordersCountDropdown" ng-model="orderCount">
+                                        <select name="ordersCount" aria-controls="ordersCount" class="form-control input-sm" ng-options="count.label for count in ordersCountDropdown" ng-model="ordersCount">
                                         </select>
                                     </label>
                                 </div>
+                            </div>-->
+                            <div class="col-sm-6 btn-group" role="group">
+                                <button type="button" class="btn btn-flat btn-info" ng-click="changeStatus('checkin')">Check In</button>
+                                <button type="button" class="btn btn-flat btn-warning" ng-click="changeStatus('checkout')">Check Out</button>
                             </div>
                             <div class="col-sm-6">
                                 <div id="orderSearch" class="dataTables_filter">
@@ -42,17 +46,17 @@
                                     <div class="col-sm-2">
                                         <h4>Asset Tag</h4>
                                     </div>
-                                    <div class="col-sm-4">
-                                        <h4>Order Id</h4>
+                                    <div class="col-sm-2">
+                                        <h4>Status</h4>
                                     </div>
                                     <div class="col-sm-2">
-                                        <h4>Description</h4>
+                                        <h4>Location</h4>
                                     </div>
                                 </div>
                                 <div class="row" ng-repeat="order in orders">
                                     <div class="col-sm-2">{{order.assetTag}}</div>
                                     <div class="col-sm-2">{{order.status}}</div>
-                                    <div class="col-sm-4">{{order.location}}</div>
+                                    <div class="col-sm-4"><span class="label" ng-class="{'label-info': order.location === 'warehouse', 'label-warning': order.location !== 'warehouse'}">{{order.location}}</span></div>
                                 </div>
                             </div>
                         </div>
