--- a/public/templates/create.html
+++ b/public/templates/create.html
@@ -19,7 +19,7 @@
                         <div class="box-body">
                             <!-- Asset Tag -->
                             <div class="form-group ">
-                                <label for="assetTag" class="col-md-3 control-label">Asset Id</label>
+                                <label for="assetTag" class="col-md-3 control-label">Asset Tag</label>
                                 <div class="col-md-7 col-sm-12 required">
                                     <input class="form-control" type="text" name="assetTag" id="assetTag" ng-model="assetTag">
                                 </div>
