--- a/public/templates/orders.html
+++ b/public/templates/orders.html
@@ -40,33 +40,25 @@
                             </div>
                         </div>
 
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <div class="row">
-                                    <div class="col-sm-2">
-                                        <h4>Asset Tag</h4>
-                                    </div>
-                                    <div class="col-sm-2">
-                                        <h4>Name</h4>
-                                    </div>
-                                    <div class="col-sm-2">
-                                        <h4>Status</h4>
-                                    </div>
-                                    <div class="col-sm-2">
-                                        <h4>Location</h4>
-                                    </div>
-                                    <div class="col-sm-2">
-                                        <h4>Updated</h4>
-                                    </div>
-                                </div>
-                                <div class="row" ng-repeat="order in orders">
-                                    <div class="col-sm-2">{{order.assetTag}}</div>
-                                    <div class="col-sm-2">{{order.name}}</div>
-                                    <div class="col-sm-2">{{order.status === 'checkin' ? 'Checked In' : 'Checked Out'}}</div>
-                                    <div class="col-sm-2"><span class="label" ng-class="{'label-info': order.location === 'warehouse', 'label-warning': order.location !== 'warehouse'}">{{order.location | uppercase}}</span></div>
-                                    <div class="col-sm-2">{{order.updatedAt | date:'h:mma dd-MMM-yy'}}</div>
-                                </div>
-                            </div>
+                        <div class="table-responsive">
+                            <table class="table table-condensed table-striped">
+                                <thead>
+                                    <tr>
+                                        <th><h4>Asset Tag</h4></th>
+                                        <th><h4>Status</h4></th>
+                                        <th><h4>Location</h4></th>
+                                        <th><h4>Updated At</h4></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr ng-repeat="order in orders">
+                                        <td>{{order.assetTag}}</td>
+                                        <td>{{order.status === 'checkin' ? 'Checked In' : 'Checked Out'}}</td>
+                                        <td><span class="label" ng-class="{'label-info': order.location === 'warehouse', 'label-warning': order.location !== 'warehouse'}">{{order.location | uppercase}}</span></td>
+                                        <td>{{order.updatedAt | date:'h:mma dd-MMM-yy'}}</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
