--- a/public/templates/cases.html
+++ b/public/templates/cases.html
@@ -45,7 +45,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="case in cases">
+                                    <tr ng-repeat="case in cases" ng-click="getCaseDetails(case.assetTag)">
                                         <td>{{case.assetTag}}</td>
                                         <td>{{case.caseNumber}}</td>
                                         <td>{{case.description}}</td>
