added product details modal

--- a/public/templates/cases.html
+++ b/public/templates/cases.html
@@ -36,7 +36,7 @@
                         </div>
 
                         <div class="table-responsive">
-                            <table class="table table-condensed table-striped">
+                            <table class="table table-condensed table-striped table-hover">
                                 <thead>
                                     <tr>
                                         <th><h4>Asset Tag</h4></th>
