--- a/public/templates/product-details.html
+++ b/public/templates/product-details.html
@@ -8,18 +8,26 @@
                 <label>Asset Tag:</label> {{details.assetTag}}
             </div>
             <div class="col-sm-offset-2 col-sm-3">
-                <label>Inside Case #:</label> {{details.inCase.case}}
+                <div ng-if="!edit"><label>Inside Case #:</label> {{details.inCase.case}}</div>
+                <div ng-if="edit"><label>Inside Case #:</label> <input type="text" ng-model="details.inCase.case"/></div>
             </div>
             <div class="col-sm-3">
-                <label>Quantity in Case:</label> {{details.inCase.quantity}}
+                <div ng-if="!edit"><label>Quantity in Case:</label> {{details.inCase.quantity}}</div>
+                <div ng-if="edit"><label>Quantity in Case:</label> <input type="text" ng-model="details.inCase.quantity"/></div>
+            </div>
+            <div class="col-sm-1">
+                <button type="button" class="btn btn-xs btn-warning edit-icon" ng-hide="edit" ng-click="edit = !edit">Edit</button>
+                <button type="button" class="btn btn-xs btn-success save-icon" ng-show="edit" ng-click="saveChanges()">Save</button>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-5">
-                <label>Name:</label> {{details.name}}
+                <div ng-if="!edit"><label>Name:</label> {{details.name}}</div>
+                <div ng-if="edit"><label>Name:</label> <input type="text" ng-model="details.name"/></div>
             </div>
             <div class="col-sm-7">
-                <label>Description:</label> {{details.description}}
+                <div ng-if="!edit"><label>Description:</label> {{details.description}}</div>
+                <div ng-if="edit"><label>Description:</label> <textarea row="4" ng-model="details.description"/></div>
             </div>
         </div>
 
