--- a/public/templates/product-details.html
+++ b/public/templates/product-details.html
@@ -9,13 +9,13 @@
             </div>
             <div class="col-sm-offset-2 col-sm-3">
                 <div ng-if="!edit"><label>Inside Case #:</label> {{details.inCase.case}}</div>
-                <div ng-if="edit"><label>Inside Case #:</label> <input type="text" ng-model="details.inCase.case"/></div>
+                <div ng-if="edit"><label>Inside Case #:</label> <input class="form-input" type="text" ng-model="details.inCase.case"/></div>
             </div>
             <div class="col-sm-3">
                 <div ng-if="!edit"><label>Quantity in Case:</label> {{details.inCase.quantity}}</div>
-                <div ng-if="edit"><label>Quantity in Case:</label> <input type="text" ng-model="details.inCase.quantity"/></div>
+                <div ng-if="edit"><label>Quantity in Case:</label> <input class="form-input" type="text" ng-model="details.inCase.quantity"/></div>
             </div>
-            <div class="col-sm-1">
+            <div class="col-sm-1 pull-right">
                 <button type="button" class="btn btn-xs btn-warning edit-icon" ng-hide="edit" ng-click="edit = !edit">Edit</button>
                 <button type="button" class="btn btn-xs btn-success save-icon" ng-show="edit" ng-click="saveChanges()">Save</button>
             </div>
@@ -23,11 +23,11 @@
         <div class="row">
             <div class="col-sm-5">
                 <div ng-if="!edit"><label>Name:</label> {{details.name}}</div>
-                <div ng-if="edit"><label>Name:</label> <input type="text" ng-model="details.name"/></div>
+                <div ng-if="edit"><label>Name:</label> <input class="form-input" type="text" ng-model="details.name"/></div>
             </div>
             <div class="col-sm-7">
                 <div ng-if="!edit"><label>Description:</label> {{details.description}}</div>
-                <div ng-if="edit"><label>Description:</label> <textarea row="4" ng-model="details.description"/></div>
+                <div ng-if="edit"><label>Description:</label> <textarea class="form-input" row="4" ng-model="details.description"/></div>
             </div>
         </div>
 
